Much better popup alignment code, needs some small fixes still. Also started to simplify the menu data structure by removing redundant elements

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,8 @@ html {
 
   font-family: Verdana;
   font-size: 10pt;
+
+  background: #2f2f2f;
 }
 
 *, *:before, *:after {
